@@ -10,3 +10,5 @@ Armin "bored" Michel <bored@sourceforge.net>
 Jeffrey Morgan <kuzman@zoominternet.net>
 'cuppa' project team (http://sourceforge.jp/projects/cuppa/)
 Phil Verghese <philv@users.sourceforge.net>
+Lavoie Philippe <lavoie@yukon.genie.uottawa.ca>
+Pavel Zabelin
