@@ -1,3 +1,11 @@
+2002-05-07 Baptiste Lepilleur <gaiacrtn@free.fr>
+
+	* src/DllPlugInTester/CommandLineParser.cpp: fixed compilation issue.
+
+  * src/msvc6/TestRunner/ActiveTest.h:
+  * src/msvc6/TestRunner/ActiveTest.cpp: reindented. bugfix: thread handle 
+    resource leak (bug #553424).
+
 2002-04-25 Baptiste Lepilleur <gaiacrtn@free.fr>
 
 	* src/cppunit/XmlOutputter.cpp: bugfix, use ISO-8859-1 encoding if an
